<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_0" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LayoutLib" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rDl-6c-lH1" customClass="LayoutView" customModule="LayoutLib" customModuleProvider="target">
                                <rect key="frame" x="16" y="20" width="20" height="20"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" priority="250" constant="20" id="QGC-Ch-hpZ"/>
                                    <constraint firstAttribute="width" priority="250" constant="20" id="x0c-Y8-eJe"/>
                                </constraints>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="8xO-ow-i7u">
                                <rect key="frame" x="16" y="460" width="84" height="100"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SWG-eL-1ac">
                                        <rect key="frame" x="0.0" y="0.0" width="84" height="30"/>
                                        <state key="normal" title="Add first"/>
                                        <connections>
                                            <action selector="addFirst:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dwc-sN-eNh"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zce-aM-tzm">
                                        <rect key="frame" x="0.0" y="35" width="84" height="30"/>
                                        <state key="normal" title="Add random"/>
                                        <connections>
                                            <action selector="addRandom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Djc-S8-VKJ"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pjP-of-A5d">
                                        <rect key="frame" x="0.0" y="70" width="84" height="30"/>
                                        <state key="normal" title="Add last"/>
                                        <connections>
                                            <action selector="addLast:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KOS-Qv-lLr"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="frd-Wh-yqo">
                                <rect key="frame" x="162" y="425" width="112" height="135"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nKs-qa-mLG">
                                        <rect key="frame" x="0.0" y="0.0" width="112" height="30"/>
                                        <state key="normal" title="Remove first"/>
                                        <connections>
                                            <action selector="removeFirst:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sbO-0N-Arn"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yw8-pq-C2M">
                                        <rect key="frame" x="0.0" y="35" width="112" height="30"/>
                                        <state key="normal" title="Remove random"/>
                                        <connections>
                                            <action selector="removeRandom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wag-rZ-Hxk"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cwc-wA-ux4">
                                        <rect key="frame" x="0.0" y="70" width="112" height="30"/>
                                        <state key="normal" title="Remove last"/>
                                        <connections>
                                            <action selector="removeLast:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Saz-fH-Bqn"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Stf-YI-jaP">
                                        <rect key="frame" x="0.0" y="105" width="112" height="30"/>
                                        <state key="normal" title="Remove all"/>
                                        <connections>
                                            <action selector="removeAll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UB1-aP-VTf"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="rDl-6c-lH1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="4PJ-FI-vbl"/>
                            <constraint firstItem="frd-Wh-yqo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="rDl-6c-lH1" secondAttribute="bottom" id="Peb-up-l4Z"/>
                            <constraint firstAttribute="leadingMargin" secondItem="8xO-ow-i7u" secondAttribute="leading" id="eYC-Rx-CNX"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="frd-Wh-yqo" secondAttribute="bottom" constant="8" id="peI-XZ-l1x"/>
                            <constraint firstAttribute="trailingMargin" secondItem="frd-Wh-yqo" secondAttribute="trailing" constant="30" id="r8N-9A-gz9"/>
                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="rDl-6c-lH1" secondAttribute="trailing" id="raO-zy-c4b"/>
                            <constraint firstItem="rDl-6c-lH1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="uQ2-my-jGX"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="8xO-ow-i7u" secondAttribute="bottom" constant="8" id="vKI-X0-AfN"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="containerHeight" destination="QGC-Ch-hpZ" id="uUs-nM-zbr"/>
                        <outlet property="containerView" destination="rDl-6c-lH1" id="BOD-3f-Hvz"/>
                        <outlet property="containerWidth" destination="x0c-Y8-eJe" id="b5E-TN-Hok"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="118.125" y="122.53521126760563"/>
        </scene>
    </scenes>
</document>
